# worknotes

./: resources.txt
Arduino/LCD/LCD12846/: LCD12846.ino
Arduino/Ultrasonic/Ultrasonic/: Ultrasonic.pde
Arduino/accelerator/mail/: mail.ino
Arduino/cnc/stepper/: stepper.ino
Arduino/led_pov/: led_pov.ino
Arduino/sketch_jun03a/: sketch_jun03a.ino
Arduino/stepper/: 28byj-48 stepper.c
Arduino/timer_test/: timer_test.ino
Arduino/ultrasonic/: ultrasonic.ino
ledpov/: 4LeafClover.dxf  4LeafClover_12x12.dxf  4LeafClover_splines.dxf  4LeafClover_splines.dxf~  4LeafClover_splines_12x12.dxf  4LeafClover_splines_12x12.dxf~  clover_031.dxf  clover_031.eps  clover_031_12x12.dxf  clover_031_12x12.dxf~  ledpov.html  pov.dxf  read_svg.py  rsz_clover_031.dxf  rsz_clover_031_12x12.dxf  rsz_clover_031_500x500.dxf  rsz_clover_031_500x500_splines.dxf
opencv/script/: camera.py  cameraParam.npz  cameraParam.yaml  cameraWorldRel.py  camera_calibration.py  chessboard.py  img2worldcoordinate.py  ledPovImgExtractor.py  lookpickplace.py  opencv.py  partDetector.py  pnpParams.npz  poseEstimation.py  pyv4l2_example.py  robot.py  shapedetector.py  worldRobotRel.py
robotArm/: AssemblyAll.stl  base.stl  link1.stl  link2.stl  link3.stl
ros/src/myrobot_driver/: CMakeLists.txt  package.xml
ros/src/myrobot_driver/launch/: motion_streaming_interface.launch  myrobot_action_server.launch  myrobot_controller.launch  readme.md  robot_interface_streaming.launch  robot_state.launch
ros/src/myrobot_driver/src/: myrobot_action_server.cpp  myrobot_controller.py  myrobot_controller_xx.py
(+98 files in other folders)
